--- a/[DS-2.1]Baseline_modeling.ipynb
+++ b/[DS-2.1]Baseline_modeling.ipynb
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "a609acc0",
    "metadata": {},
    "outputs": [],
@@ -557,6 +557,12 @@
     "    data[\"subcat_cd\"] = LabelEncoder().fit_transform(data[\"subcat\"])\n",
     "    data.drop([\"item_category\"], axis=1, inplace=True)\n",
     "    data.drop([\"subcat\"], axis=1, inplace=True)\n",
+    "    \n",
+    "    return data\n",
+    "\n",
+    "def one_hot_encode_data(data):\n",
+    "    \n",
+    "    data = pd.get_dummies(data, columns = ['location', 'shop_type','item_category','subcat'])\n",
     "    \n",
     "    return data\n",
     "\n",
@@ -614,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "id": "83cc4d4b",
    "metadata": {},
    "outputs": [],
@@ -622,6 +628,7 @@
     "def primary_data_for_modeling(data, first_encounter=False):\n",
     "    \n",
     "    train_ds = novelty_feature(data)\n",
+    "    train_ds = one_hot_encode_data(train_ds)\n",
     "    train_ds = lag_features(train_ds, [1, 2, 3, 4, 5, 6, 12], [\"item_cnt_monthly\"])\n",
     "    train_ds = last_halfyear_feathure(train_ds)\n",
     "    train_ds.fillna(0, inplace=True)\n",
@@ -640,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "83ad3f01",
    "metadata": {},
    "outputs": [],
@@ -669,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "6f83f0dc",
    "metadata": {},
    "outputs": [],
@@ -697,8 +704,8 @@
     "            else:\n",
     "                test_ds = data_1[(data_1[data_1.date_block_num==month][-1:].index[0]+1):]\n",
     "            ##encoding\n",
-    "            train_ds = label_encode_data(train_ds)\n",
-    "            test_ds = label_encode_data(test_ds)\n",
+    "            #train_ds = label_encode_data(train_ds)\n",
+    "            #test_ds = label_encode_data(test_ds)\n",
     "            \n",
     "            #train_ds = primary_data_for_modeling(train_ds)\n",
     "            #test_ds = primary_data_for_modeling(test_ds)\n",
@@ -722,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "id": "62040c0d",
    "metadata": {
     "scrolled": false
@@ -735,32 +742,32 @@
       "Months of train: [ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23\n",
       " 24 25 26 27 28]\n",
       "Months of test: [29]\n",
-      "RMSE on train:  5.647306310538707\n",
-      "RMSE on validation:  3.948269266549704\n",
+      "RMSE on train:  5.5599011106659795\n",
+      "RMSE on validation:  4.109259646732683\n",
       "----------------------------------------------------------------------------------------------------\n",
       "Months of train: [ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23\n",
       " 24 25 26 27 28 29]\n",
       "Months of test: [30]\n",
-      "RMSE on train:  5.615426390148261\n",
-      "RMSE on validation:  2.3850416626498374\n",
+      "RMSE on train:  5.531475986563945\n",
+      "RMSE on validation:  2.6782884958605457\n",
       "----------------------------------------------------------------------------------------------------\n",
       "Months of train: [ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23\n",
       " 24 25 26 27 28 29 30]\n",
       "Months of test: [31]\n",
-      "RMSE on train:  5.564153370796958\n",
-      "RMSE on validation:  2.8483815083913795\n",
+      "RMSE on train:  5.48409147740065\n",
+      "RMSE on validation:  2.885941677712586\n",
       "----------------------------------------------------------------------------------------------------\n",
       "Months of train: [ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23\n",
       " 24 25 26 27 28 29 30 31]\n",
       "Months of test: [32]\n",
-      "RMSE on train:  5.519427005583291\n",
-      "RMSE on validation:  17.120985781499073\n",
+      "RMSE on train:  5.440621424742391\n",
+      "RMSE on validation:  16.961013783912506\n",
       "----------------------------------------------------------------------------------------------------\n",
       "Months of train: [ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23\n",
       " 24 25 26 27 28 29 30 31 32]\n",
       "Months of test: [33]\n",
-      "RMSE on train:  5.949700371797102\n",
-      "RMSE on validation:  5.005371176753293\n",
+      "RMSE on train:  5.8351297344723685\n",
+      "RMSE on validation:  4.925313808746423\n",
       "----------------------------------------------------------------------------------------------------\n"
      ]
     }
