--- a/[DS-2.2]Baseline_modeling_p2.ipynb
+++ b/[DS-2.2]Baseline_modeling_p2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "9936ae22",
    "metadata": {},
    "outputs": [],
@@ -19,6 +19,7 @@
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.svm import SVR\n",
     "import xgboost as xgb\n",
+    "import lightgbm as lgb\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")"
@@ -26,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "c1b9b7e1",
    "metadata": {},
    "outputs": [],
@@ -37,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "05b7ae1f",
    "metadata": {},
    "outputs": [],
@@ -48,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "205db719",
    "metadata": {},
    "outputs": [],
@@ -128,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "91670c8c",
    "metadata": {},
    "outputs": [],
@@ -161,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "6e0d5f67",
    "metadata": {},
    "outputs": [],
@@ -204,12 +205,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "56a9c512",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def grid_search_func(train_ds, model, param_space, enc):\n",
+    "def grid_search_func(train_ds, model, param_space):\n",
     "    \n",
     "            from sklearn.model_selection import GridSearchCV\n",
     "\n",
@@ -218,7 +219,7 @@
     "            \n",
     "            best_params_models = {}\n",
     "            \n",
-    "            grid_search = GridSearchCV(model, param_space, cv=cross_validation_for_grid(train_ds, 28), return_train_score=True)\n",
+    "            grid_search = GridSearchCV(model, param_space, cv=cross_validation_for_grid(train_ds, 30), return_train_score=True, verbose = 5, n_jobs=-1)\n",
     "            grid_search.fit(train_ds.drop('item_cnt_monthly', axis=1), train_ds['item_cnt_monthly'])\n",
     "                \n",
     "            print(model)\n",
@@ -228,12 +229,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "9ce8184e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_ds_pred = primary_data_for_modeling(train_ds, 'label')"
+    "#what was done here is for the sake of speed\n",
+    "train_ds_pred = train_ds[train_ds.date_block_num>11]\n",
+    "train_ds_pred = primary_data_for_modeling(train_ds_pred, 'label')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "32b5dc05",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del train, test, train_ds"
    ]
   },
   {
@@ -246,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "7b6666cb",
    "metadata": {},
    "outputs": [
@@ -254,15 +267,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Fitting 3 folds for each of 4 candidates, totalling 12 fits\n",
       "DecisionTreeRegressor()\n",
-      "Best params:  {'max_depth': 5}\n",
-      "Best score:  0.48041580953518015\n"
+      "Best params:  {'max_depth': 3}\n",
+      "Best score:  0.41414438632067885\n"
      ]
     }
    ],
    "source": [
     "param_DT = {'max_depth': [3, 5, 6, 8]}\n",
-    "grid_search_func(train_ds_pred, DecisionTreeRegressor(), param_DT, 'label')"
+    "grid_search_func(train_ds_pred, DecisionTreeRegressor(), param_DT)"
    ]
   },
   {
@@ -275,14 +289,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "52032df3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 3 folds for each of 8 candidates, totalling 24 fits\n",
+      "RandomForestRegressor()\n",
+      "Best params:  {'max_depth': 5, 'n_estimators': 50, 'n_jobs': -1}\n",
+      "Best score:  0.44769956396558985\n"
+     ]
+    }
+   ],
    "source": [
     "param_RF = {'max_depth': [3, 5, 6, 8],\n",
-    "           'n_estimators': [100, 150, 200]}\n",
-    "grid_search_func(train_ds_pred, RandomForestRegressor(), param_RF, 'label')"
+    "           'n_estimators': [50, 100],\n",
+    "           'n_jobs':[-1]}\n",
+    "\n",
+    "grid_search_func(train_ds_pred, RandomForestRegressor(), param_RF)"
    ]
   },
   {
@@ -296,15 +323,54 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a52125a2",
+   "id": "ed0fa719",
    "metadata": {},
    "outputs": [],
    "source": [
-    "param_SVR = {'C': [0.1,1, 10, 100],\n",
-    "             'gamma': [1,0.1,0.01,0.001],\n",
-    "             'kernel': ['rbf', 'poly', 'sigmoid']}\n",
+    "#The cell run in this one didn't complete for more than 8 hours, so i didn't ran it"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "e2f2a88a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "def scaler(train_ds):\n",
+    "    \n",
+    "    # the scaler object (model)\n",
+    "    scaler = StandardScaler()\n",
+    "    # fit and transform the data\n",
+    "    numeric = ['shop_id', 'item_category_id', 'mean_item_price','item_id','shop_id','loc_cd','shop_type_cd','item_cat_cd','subcat_cd',]\n",
+    "    scaler.fit(train_ds[numeric])\n",
+    "    train_ds[numeric] = scaler.transform(train_ds[numeric])\n",
+    "    \n",
+    "    return train_ds\n",
     "\n",
-    "grid_search_func(train_ds_pred, SVR(), param_SVR, 'label')"
+    "train_ds_pred = scaler(train_ds_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a52125a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 3 folds for each of 6 candidates, totalling 18 fits\n"
+     ]
+    }
+   ],
+   "source": [
+    "param_SVR = {'C': [0.1, 1, 10],\n",
+    "             'kernel': ['rbf', 'sigmoid']}\n",
+    "\n",
+    "grid_search_func(train_ds_pred, SVR(cache_size=7000), param_SVR)"
    ]
   },
   {
@@ -317,22 +383,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "ecdad752",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 3 folds for each of 8 candidates, totalling 24 fits\n",
+      "XGBRegressor(base_score=None, booster=None, callbacks=None,\n",
+      "             colsample_bylevel=None, colsample_bynode=None,\n",
+      "             colsample_bytree=None, early_stopping_rounds=None,\n",
+      "             enable_categorical=False, eval_metric=None, feature_types=None,\n",
+      "             gamma=None, gpu_id=None, grow_policy=None, importance_type=None,\n",
+      "             interaction_constraints=None, learning_rate=None, max_bin=None,\n",
+      "             max_cat_threshold=None, max_cat_to_onehot=None,\n",
+      "             max_delta_step=None, max_depth=None, max_leaves=None,\n",
+      "             min_child_weight=None, missing=nan, monotone_constraints=None,\n",
+      "             n_estimators=100, n_jobs=None, num_parallel_tree=None,\n",
+      "             predictor=None, random_state=None, ...)\n",
+      "Best params:  {'max_depth': 8, 'n_estimators': 50, 'n_jobs': -1}\n",
+      "Best score:  0.4247756435743307\n"
+     ]
+    }
+   ],
    "source": [
     "param_XGB = {'max_depth': [3, 5, 6, 8],\n",
-    "             'n_estimators': [100, 150, 200],}\n",
-    "grid_search_func(train_ds_pred, xgb.XGBRegressor(), param_XGB, 'label')"
+    "             'n_estimators': [50, 100],\n",
+    "             'n_jobs':[-1]}\n",
+    "grid_search_func(train_ds_pred, xgb.XGBRegressor(), param_XGB)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8ec6f8b3",
+   "metadata": {},
+   "source": [
+    "**LGBM:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "78b489eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 3 folds for each of 8 candidates, totalling 24 fits\n",
+      "LGBMRegressor()\n",
+      "Best params:  {'max_depth': 3, 'n_estimators': 50, 'n_jobs': -1}\n",
+      "Best score:  0.42349810969927154\n"
+     ]
+    }
+   ],
+   "source": [
+    "param_LGB = {'max_depth': [3, 5, 6, 8],\n",
+    "             'n_estimators': [50, 100],\n",
+    "             'n_jobs':[-1]}\n",
+    "grid_search_func(train_ds_pred, lgb.LGBMRegressor(), param_LGB)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d45c1c21",
+   "metadata": {},
+   "source": [
+    "There lower score is in XGB and LGBM Regressors."
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
-   "name": "python3"
+   "name": "venv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -344,7 +474,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
